# RabbitMQ_example

./: README.md  config.py  docker-compose.yaml  publisher.py  pyproject.toml
