[tool.poetry]
name = "rabbitmq-example"
version = "0.1.0"
description = ""
authors = ["David-Roklem <roklem@mail.ru>"]
readme = "README.md"
packages = [{include = "rabbitmq_example"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
pika-stubs = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
